# altreg

./: .gitignore  Cargo.toml  README.md  config.toml
src/: api.rs  auth.rs  config.rs  db.rs  dl.rs  docs.rs  index.rs  lib.rs  main.rs  mirror.rs  package.rs  token.rs  ui.rs
static/: styles.css
templates/: base.html  crate.html  crate_not_found.html  crates.html  login.html  register.html  tokens.html
