[package]
name = "altreg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
axum = { version = "0.5.15", features = ["http2"] }
bincode = "1.3.3"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-humanize = "0.2.2"
comrak = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
semver = "1.0.14"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
sled = "0.34.7"
tera = "1.17.1"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
tower-http = { version = "0.3.4", features = ["trace", "fs"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
